Fixed weird tailwind bug causing celeb avatars not correctly scaling based on placing and not correctly ordering on mobile devices (order utility tailwind class does not work, but recreating it as a custom one does 😵‍💫)

--- a/client/app/tailwind.css
+++ b/client/app/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .order-overwrite-first {
+    order: -1;
+  }
+}
